changed academy name

--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ html
             li #[a(href="/") Contact Us]
 
     section#introSection
-        div Welcome to Harry's Dance Academy
+        div Welcome to Perfect Dance Academy
         div.small Eat Sleep Dance Repeat
 
     section#missionSection
@@ -59,4 +59,4 @@ html
             img(src= "/static/pandg.jpg", alt= "Sponsor Image",class="spImage")
             img(src= "/static/bmw.jpg", alt= "Sponsor Image",class="spImage")
     footer#footer
-       | Copyright © 2019 HarryAcademy.com | All Rights Reserved 
+       | Copyright © 2021 HarryAcademy.com | All Rights Reserved 
